add cms data notebook

--- a/dataCMSChronic.ipynb
+++ b/dataCMSChronic.ipynb
@@ -1,69 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1111b51f-e379-4d3e-a1ad-ec53720f2e18",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Predicting CMS Prevalence of Diabetes at County Level based CDC Social Determinates of Health"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4508b4e-4615-41a6-9b82-ed3e4d1e873c",
-   "metadata": {},
-   "source": [
-    "## Overview\n",
-    "Studies show a strong correlation between social determinates of health and mental/physical health __[County Health Rankings, Relationships Between Determinant Factors\n",
-    "and Health Outcomes](https://www.ajpmonline.org/article/S0749-3797(15)00514-0/fulltext)__ provides a detailed analysis of social features correlated to premature death, low birth weight and poor mental/physical health.  The CDC provides \n",
-    "__[analytic tools to analytize diabetes and a social vulnerability index](https://gis.cdc.gov/grasp/diabetes/diabetesatlas-sdoh.html#)__.\n",
-    "\n",
-    "''<img src='./diabetes_ohio.png' title='Ohio Diabetes Prevalence and Social Vulnerability Index' />\n",
-    "\n",
-    "The target for the models is the prevalence (percent) of diabetes based on Medicare claims in a county.  The features used to predict the target are social determinates of health based on CDC data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1510e10e-c384-46cd-b5b2-1ed111e8ee1d",
-   "metadata": {},
-   "source": [
-    "## Benefits\n",
-    "The models can be used in several ways:\n",
-    "- Ranking the important social features for a county.\n",
-    "- Predicting the prevalence when social features change."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d207d74c-02b1-4c25-a7b6-32fc8cbcb966",
-   "metadata": {},
-   "source": [
-    "# Acquire Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "491fe0ff-0815-4f1c-8b29-8151f2aa1bd5",
-   "metadata": {},
-   "source": [
-    "## CMS Diabetes Claims"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1aaf160a-d8b4-4c8c-96d6-36a4a7427ccb",
-   "metadata": {},
-   "source": [
-    "Call CMS Chronic Data notebook"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
+   "execution_count": 3,
+   "id": "883bb635-9ee5-40cc-86f4-b20a5eacdb37",
    "metadata": {},
    "outputs": [
     {
@@ -193,63 +133,49 @@
        "[3251 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parm_CMSChronic_year = '2018'\n",
-    "parm_CMSChronic_disease = 'Diabetes'\n",
-    "%run ./dataCMSChronic.ipynb\n",
-    "dfCMSChronicPrevalence = out_CMSChronic()\n",
-    "dfCMSChronicPrevalence"
+    "\n",
+    "import requests\n",
+    "#url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Chronic-Conditions/Downloads/CC_Prev_State_County_Age.zip'\n",
+    "#r = requests.get(url)\n",
+    "#with open('myzip.zip', 'wb') as f:\n",
+    "#    f.write(r.content) \n",
+    "\n",
+    "from zipfile import ZipFile  \n",
+    "# loading the temp.zip and creating a zip object\n",
+    "with ZipFile('myzip.zip', 'r') as zObject:\n",
+    "# Extracting all files\n",
+    "    zObject.extractall(\"./CMSchronic\")\n",
+    "    zObject.close()\n",
+    "\n",
+    "import pandas as pd \n",
+    "# !pip3 install openpyxl\n",
+    "  \n",
+    "# Import the excel file and call it xls_file\n",
+    "dfCMSChronic = pd.read_excel('./CMSchronic/County_Table_Chronic_Conditions_Prevalence_by_Age_' + parm_CMSChronic_year + '.xlsx',\n",
+    "                  sheet_name = 'All Beneficiaries', header=4)\n",
+    "dfCMSChronic = dfCMSChronic.drop(dfCMSChronic.index [ [ 0,1,2 ] ])\n",
+    "dfCMSChronic.columns.values[0]='State'\n",
+    "dfCMSChronic.columns.values[1]='County'\n",
+    "dfCMSChronic.columns.values[2]='FIPS'\n",
+    "dfCMSChronic = dfCMSChronic[['State', 'County', 'FIPS', parm_CMSChronic_disease ]].copy()\n",
+    "\n",
+    "def out_CMSChronic():\n",
+    "    return dfCMSChronic\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "995a144a-9a0e-4e4b-9da7-3783b9b3f3bb",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3db0589d-331a-40c3-8077-59a17506b4ac",
    "metadata": {},
-   "source": [
-    "## CDC Social Determinates of Health"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c217969-2a06-4a36-aa35-d8096336c8d1",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Explore Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4352971c-3e3b-40ad-bfcb-6bf33ac76d53",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# Prepare and Clean Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da905b3e-c85b-4ef2-abf1-2183d801dd98",
-   "metadata": {},
-   "source": [
-    "# Develop Models and Evaluate Performance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f28a33e8-6185-4932-be05-b6eaffed6169",
-   "metadata": {},
-   "source": [
-    "# Publish Models"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -269,10 +195,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
-  },
-  "toc-autonumbering": true,
-  "toc-showcode": true,
-  "toc-showmarkdowntxt": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
