--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -32,8 +32,9 @@
    "source": [
     "## Benefits\n",
     "The models can be used in several ways:\n",
-    "- Ranking the important social features for a county.\n",
-    "- Predicting the prevalence when social features change."
+    "- Ranking the important SDOH features for a county.\n",
+    "- Predicting the CMS prevalence based on SDOH features changes.\n",
+    "- Predicting the CMS prevalence when new CDC SDOH data is available."
    ]
   },
   {
@@ -47,7 +48,10 @@
   {
    "cell_type": "markdown",
    "id": "491fe0ff-0815-4f1c-8b29-8151f2aa1bd5",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## CMS Diabetes Claims"
    ]
@@ -64,7 +68,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -241,6 +247,30 @@
    "metadata": {},
    "source": [
     "# Develop Models and Evaluate Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d961d0-f0ac-4673-b6c6-6076636f87e8",
+   "metadata": {},
+   "source": [
+    "## Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b3cbc2-ea6f-48d2-96dd-847f29a97e29",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ab7df8f-a92e-4617-9e28-42a881e19fd4",
+   "metadata": {},
+   "source": [
+    "## Boosted Trees"
    ]
   },
   {
