--- a/dataCMSChronic.ipynb
+++ b/dataCMSChronic.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e70c00bf-2855-4ded-943b-5bb235d44301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Provide function out_CMSChronic() to return dataframe for CMS Chronic\n",
+    "Disease data using input parameters:\n",
+    "    parm_CMSChronic_year = '2018'\n",
+    "parm_CMSChronic_disease = 'Diabetes'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "883bb635-9ee5-40cc-86f4-b20a5eacdb37",
    "metadata": {},
