--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -7,7 +7,11 @@
     "tags": []
    },
    "source": [
-    "# Predicting CMS Prevalence of Diabetes at County Level based CDC Social Determinates of Health"
+    "# Predicting CMS Prevalence of Diabetes at County Level based CDC Social Determinates of Health\n",
+    "\n",
+    "\n",
+    "\n",
+    "__[GitHub: SocialHealthAI/CMS-CDC-SDOH](https://github.com/SocialHealthAI/CMS-CDC-SDOH)__"
    ]
   },
   {
