--- a/dataCMSChronic.ipynb
+++ b/dataCMSChronic.ipynb
@@ -1,16 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e70c00bf-2855-4ded-943b-5bb235d44301",
+   "cell_type": "markdown",
+   "id": "f7b68dc6-7fd3-4b2b-8776-9685b92c380e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Provide function out_CMSChronic() to return dataframe for CMS Chronic\n",
-    "Disease data using input parameters:\n",
-    "    parm_CMSChronic_year = '2018'\n",
-    "parm_CMSChronic_disease = 'Diabetes'"
+    "Provide function out_CMSChronic() to return dataframe for CMS Chronic Disease data using input parameters:\n",
+    "- parm_CMSChronic_year\n",
+    "- parm_CMSChronic_disease"
    ]
   },
   {
