--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "# Predicting CMS Prevalence of Diabetes at County Level based CDC Social Determinates of Health\n",
+    "# Predicting CMS Prevalence of Diabetes at County Level based on CDC Social Determinates of Health\n",
     "\n",
     "\n",
     "\n",
@@ -22,13 +22,13 @@
    "id": "e4508b4e-4615-41a6-9b82-ed3e4d1e873c",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     },
     "tags": []
    },
    "source": [
     "## Overview\n",
-    "Studies show a strong correlation between social determinates of health and mental/physical health __[County Health Rankings, Relationships Between Determinant Factors\n",
+    "Studies show a strong correlation between social determinates of health and mental/physical health. __[County Health Rankings, Relationships Between Determinant Factors\n",
     "and Health Outcomes](https://www.ajpmonline.org/article/S0749-3797(15)00514-0/fulltext)__ provides a detailed analysis of social features correlated to premature death, low birth weight and poor mental/physical health.  The CDC provides \n",
     "__[analytic tools to analytize diabetes and a social vulnerability index](https://gis.cdc.gov/grasp/diabetes/diabetesatlas-sdoh.html#)__.\n",
     "\n",
@@ -57,7 +57,12 @@
   {
    "cell_type": "markdown",
    "id": "d207d74c-02b1-4c25-a7b6-32fc8cbcb966",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Acquire Data"
    ]
@@ -67,7 +72,7 @@
    "id": "491fe0ff-0815-4f1c-8b29-8151f2aa1bd5",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     },
     "tags": [],
     "toc-hr-collapsed": true
@@ -79,7 +84,12 @@
   {
    "cell_type": "markdown",
    "id": "1aaf160a-d8b4-4c8c-96d6-36a4a7427ccb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "source": [
     "Call CMS Chronic Data notebook"
    ]
@@ -89,6 +99,9 @@
    "execution_count": 2,
    "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
    "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -236,7 +249,10 @@
    "cell_type": "markdown",
    "id": "51813565-ceb3-4121-8ce2-2e3969fdc84e",
    "metadata": {
-    "toc-hr-collapsed": true
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
    },
    "source": [
     "## Explore CMS Data"
@@ -247,6 +263,9 @@
    "execution_count": 11,
    "id": "778415bf-8d7f-4aff-9a01-650cc521376b",
    "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -287,21 +306,16 @@
     "dfDisplay.plot(x=\"County\", y=\"Diabetes\", kind=\"bar\", figsize=(20,5))\n",
     "plt.title(\"Ohio Diabetes Prevalence\", fontsize=10)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "#fig, ax = plt.subplots()\n",
-    "\n",
-    "#x = dfDisplay['County']\n",
-    "#y = dfDisplay['Diabetes']\n",
-    "#ax.plot(x, y)\n",
-    "\n",
-    "## Acquire CDC Social Determinates of Health"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "4c217969-2a06-4a36-aa35-d8096336c8d1",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": []
    },
    "source": [
@@ -313,6 +327,9 @@
    "id": "4352971c-3e3b-40ad-bfcb-6bf33ac76d53",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": []
    },
    "source": [
@@ -322,7 +339,12 @@
   {
    "cell_type": "markdown",
    "id": "da905b3e-c85b-4ef2-abf1-2183d801dd98",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Develop Models and Evaluate Performance"
    ]
@@ -330,7 +352,12 @@
   {
    "cell_type": "markdown",
    "id": "13d961d0-f0ac-4673-b6c6-6076636f87e8",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "source": [
     "## Regression"
    ]
@@ -338,7 +365,12 @@
   {
    "cell_type": "markdown",
    "id": "67b3cbc2-ea6f-48d2-96dd-847f29a97e29",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "source": [
     "## Random Forest"
    ]
@@ -346,7 +378,12 @@
   {
    "cell_type": "markdown",
    "id": "6ab7df8f-a92e-4617-9e28-42a881e19fd4",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "source": [
     "## Boosted Trees"
    ]
@@ -354,7 +391,12 @@
   {
    "cell_type": "markdown",
    "id": "f28a33e8-6185-4932-be05-b6eaffed6169",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Publish Models"
    ]
