--- a/dataCMSChronic.ipynb
+++ b/dataCMSChronic.ipynb
@@ -15,159 +15,29 @@
    "execution_count": 3,
    "id": "883bb635-9ee5-40cc-86f4-b20a5eacdb37",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>Diabetes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>01001</td>\n",
-       "      <td>31.029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Baldwin</td>\n",
-       "      <td>01003</td>\n",
-       "      <td>23.5492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Barbour</td>\n",
-       "      <td>01005</td>\n",
-       "      <td>32.6483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Bibb</td>\n",
-       "      <td>01007</td>\n",
-       "      <td>32.6255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Blount</td>\n",
-       "      <td>01009</td>\n",
-       "      <td>28.6635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3249</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Uinta</td>\n",
-       "      <td>56041</td>\n",
-       "      <td>22.5342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3250</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>56999</td>\n",
-       "      <td>*</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3251</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Washakie</td>\n",
-       "      <td>56043</td>\n",
-       "      <td>23.0028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3252</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Weston</td>\n",
-       "      <td>56045</td>\n",
-       "      <td>20.5758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3253</th>\n",
-       "      <td>Unknown</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>*</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3251 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         State     County    FIPS Diabetes\n",
-       "3     Alabama    Autauga   01001    31.029\n",
-       "4     Alabama    Baldwin   01003   23.5492\n",
-       "5     Alabama    Barbour   01005   32.6483\n",
-       "6     Alabama       Bibb   01007   32.6255\n",
-       "7     Alabama     Blount   01009   28.6635\n",
-       "...        ...        ...     ...      ...\n",
-       "3249  Wyoming      Uinta    56041  22.5342\n",
-       "3250  Wyoming    Unknown    56999       * \n",
-       "3251  Wyoming   Washakie    56043  23.0028\n",
-       "3252  Wyoming     Weston   56045   20.5758\n",
-       "3253  Unknown                           * \n",
-       "\n",
-       "[3251 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "parm_CMSChronic_year = '2018'\n",
+    "parm_CMSChronic_disease = 'Diabetes'\n",
     "\n",
     "import requests\n",
-    "#url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Chronic-Conditions/Downloads/CC_Prev_State_County_Age.zip'\n",
-    "#r = requests.get(url)\n",
-    "#with open('myzip.zip', 'wb') as f:\n",
-    "#    f.write(r.content) \n",
+    "url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Chronic-Conditions/Downloads/CC_Prev_State_County_Age.zip'\n",
+    "r = requests.get(url)\n",
+    "with open('./myzip.zip', 'wb') as f:\n",
+    "    f.write(r.content) \n",
     "\n",
     "from zipfile import ZipFile  \n",
     "# loading the temp.zip and creating a zip object\n",
-    "with ZipFile('myzip.zip', 'r') as zObject:\n",
+    "with ZipFile('./myzip.zip', 'r') as zObject:\n",
     "# Extracting all files\n",
-    "    zObject.extractall(\"./CMSchronic\")\n",
+    "    zObject.extractall(\"../CMSchronic\")\n",
     "    zObject.close()\n",
     "\n",
     "import pandas as pd \n",
     "# !pip3 install openpyxl\n",
     "  \n",
     "# Import the excel file and call it xls_file\n",
-    "dfCMSChronic = pd.read_excel('./CMSchronic/County_Table_Chronic_Conditions_Prevalence_by_Age_' + parm_CMSChronic_year + '.xlsx',\n",
+    "dfCMSChronic = pd.read_excel('../CMSchronic/County_Table_Chronic_Conditions_Prevalence_by_Age_' + parm_CMSChronic_year + '.xlsx',\n",
     "                  sheet_name = 'All Beneficiaries', header=4)\n",
     "dfCMSChronic = dfCMSChronic.drop(dfCMSChronic.index [ [ 0,1,2 ] ])\n",
     "dfCMSChronic.columns.values[0]='State'\n",
