Spell check markdown.

--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -10,8 +10,7 @@
     "tags": []
    },
    "source": [
-    "# Predicting CMS Prevalence of Diabetes at County Level based on CDC Social Determinates of Health\n",
-    "\n",
+    "# Predicting CMS Prevalence of Diabetes at County Level based on CDC Social Determinants of Health\n",
     "\n",
     "\n",
     "__[GitHub: SocialHealthAI/CMS-CDC-SDOH](https://github.com/SocialHealthAI/CMS-CDC-SDOH)__"
@@ -28,13 +27,13 @@
    },
    "source": [
     "## Overview\n",
-    "Studies show a strong correlation between social determinates of health and mental/physical health. __[County Health Rankings, Relationships Between Determinant Factors\n",
+    "Studies show a strong correlation between social determinants of health and mental/physical health. __[County Health Rankings, Relationships Between Determinant Factors\n",
     "and Health Outcomes](https://www.ajpmonline.org/article/S0749-3797(15)00514-0/fulltext)__ provides a detailed analysis of social features correlated to premature death, low birth weight and poor mental/physical health.  The CDC provides \n",
-    "__[analytic tools to analytize diabetes and a social vulnerability index](https://gis.cdc.gov/grasp/diabetes/diabetesatlas-sdoh.html#)__.\n",
+    "__[analytic tools to analyize diabetes and a social vulnerability index](https://gis.cdc.gov/grasp/diabetes/diabetesatlas-sdoh.html#)__.\n",
     "\n",
     "''<img src='./diabetes_ohio.png' title='Ohio Diabetes Prevalence and Social Vulnerability Index' />\n",
     "\n",
-    "The target for the models is the prevalence (percent) of diabetes based on Medicare claims in a county.  The features used to predict the target are social determinates of health based on CDC data."
+    "The target for the models is the prevalence (percent) of diabetes based on Medicare claims in a county.  The features used to predict the target are social determinants of health based on CDC data."
    ]
   },
   {
