CMS data cleaning

--- a/dataCMSChronic.ipynb
+++ b/dataCMSChronic.ipynb
@@ -25227,6 +25227,7 @@
    ],
    "source": [
     "import requests\n",
+    "\n",
     "url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Chronic-Conditions/Downloads/CC_Prev_State_County_Age.zip'\n",
     "r = requests.get(url)\n",
     "with open('./myzip.zip', 'wb') as f:\n",
@@ -25240,7 +25241,7 @@
     "    zObject.close()\n",
     "\n",
     "import pandas as pd \n",
-    "# !pip3 install openpyxl\n",
+    "pd.set_option('display.max_rows', 15)\n",
     "  \n",
     "# Import the excel file and call it xls_file\n",
     "dfCMSChronic = pd.read_excel('../CMSchronic/County_Table_Chronic_Conditions_Prevalence_by_Age_' + parm_CMSChronic_year + '.xlsx',\n",
