--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
    "metadata": {
     "slideshow": {
@@ -231,7 +231,7 @@
        "[3146 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,6 @@
     "parm_CMSChronic_disease = 'Diabetes'\n",
     "%run ./dataCMSChronic.ipynb\n",
     "dfCMSChronicPrevalence = out_CMSChronic()\n",
-    "#dfCMSChronicPrevalence = dfCMSChronicPrevalence[dfCMSChronicPrevalence.Diabetes != '* ']\n",
     "dfCMSChronicPrevalence"
    ]
   },
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "778415bf-8d7f-4aff-9a01-650cc521376b",
    "metadata": {
     "slideshow": {
@@ -273,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83d3dfb3dd86481da59f9ccfd245f83b",
+       "model_id": "edcc849a5ce04242ad12eb8455cbc790",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,14 +300,11 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "dfDisplay = dfCMSChronicPrevalence[dfCMSChronicPrevalence.State == 'Kentucky ']\n",
-    "#dfDisplay = dfDisplay[dfDisplay.County != '']\n",
-    "#dfDisplay\n",
-    "#dfDisplay['Diabetes'] = dfDisplay['Diabetes'].apply(pd.to_numeric, errors= 'ignore')\n",
     "dfDisplay= dfDisplay.sort_values('Diabetes',ascending=False)\n",
     "dfDisplay.plot(x=\"County\", y=\"Diabetes\", kind=\"bar\", figsize=(20,5))\n",
     "plt.title(\"Ohio Diabetes Prevalence\", fontsize=10)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
