--- a/dataAHRQCountySDOH.ipynb
+++ b/dataAHRQCountySDOH.ipynb
@@ -457,6 +457,7 @@
     "# Data cleaning\n",
     "#\n",
     "dfAHRQCountySDOH.iloc[:, 2:] = dfAHRQCountySDOH.iloc[:, 2:].apply(pd.to_numeric, errors= 'ignore')\n",
+    "dfAHRQCountySDOH['COUNTY'] = dfAHRQCountySDOH['COUNTY'].str.replace(' County','')\n",
     "\n",
     "def out_AHRQCountySDOH():\n",
     "   return dfAHRQCountySDOH\n",
