--- a/CMS_AHRQ_Diabetes.ipynb
+++ b/CMS_AHRQ_Diabetes.ipynb
@@ -54,6 +54,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b338c60-69a4-4c04-84a7-4bbfc96cf62c",
+   "metadata": {},
+   "source": [
+    "# Set up Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c235027-030d-4f53-8beb-90ade58e2b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ./environment/env1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d207d74c-02b1-4c25-a7b6-32fc8cbcb966",
    "metadata": {
     "slideshow": {
@@ -62,7 +80,7 @@
     "tags": []
    },
    "source": [
-    "# Acquire Data"
+    "# Extract, transform and load data"
    ]
   },
   {
@@ -76,13 +94,13 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Aquire CMS Diabetes Claims\n",
+    "## CMS Diabetes Claims\n",
     "Call CMS Chronic Data notebook using year and disease parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
    "metadata": {
     "slideshow": {
@@ -218,7 +236,7 @@
        "[3146 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +244,7 @@
    "source": [
     "parm_CMSChronic_year = '2018'\n",
     "parm_CMSChronic_disease = 'Diabetes'\n",
-    "%run ./dataCMSChronic.ipynb\n",
+    "%run ./ETL/dataCMSChronic.ipynb\n",
     "dfCMSChronicPrevalence = out_CMSChronic()\n",
     "dfCMSChronicPrevalence"
    ]
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "778415bf-8d7f-4aff-9a01-650cc521376b",
    "metadata": {
     "slideshow": {
@@ -260,7 +278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ec228e8e6904af89c37aa197be46ad2",
+       "model_id": "241ac882e80d452b8bb29f4e208b23b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,13 +324,13 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Acquire AHRQ Data\n",
+    "## AHRQ Data\n",
     "Call AHRQ SDOH Data notebook using year parameter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "51c5aef2-0791-46e7-bfc8-5de9d8b11f42",
    "metadata": {
     "slideshow": {
@@ -730,14 +748,14 @@
        "[3232 rows x 1066 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "parm_AHRQCountySDOH_year = '2018'\n",
-    "%run ./dataAHRQCountySDOH.ipynb\n",
+    "%run ./ETL/dataAHRQCountySDOH.ipynb\n",
     "dfAHRQCountySDOH = out_AHRQCountySDOH()\n",
     "dfAHRQCountySDOH"
    ]
@@ -754,12 +772,12 @@
    },
    "source": [
     "## Explore AHRQ Data\n",
-    "Show correlations or food related SDOH."
+    "Show correlations for food related SDOH."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "4c08baf2-310f-4a04-84b6-3b7562e9be96",
    "metadata": {
     "slideshow": {
@@ -771,17 +789,17 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fc76121e6d0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fc0290b4550>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f8dfd6fd7304de283e0d192b842b936",
+       "model_id": "b4f3bada0cae48a7b7019006984870fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,29 +838,29 @@
     "tags": []
    },
    "source": [
-    "# Prepare and Clean Data"
+    "## Merge Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "38472e6e-15ad-4695-b6a9-9639a172aa1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fc75f3b2850>"
+       "<seaborn.axisgrid.PairGrid at 0x7fc0206bffd0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea192cd824134c4287bc436cde42df52",
+       "model_id": "72b598c8bff041ce94e2032b5f0a6a2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -869,6 +887,14 @@
     "#dfCMSChronicPrevalence\n",
     "dfMerged = pd.merge(dfCMSChronicPrevalence, dfAHRQFood,  how='left', left_on=['STATE','COUNTY'], right_on = ['STATE','COUNTY'])\n",
     "sns.pairplot(dfMerged)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a0c48f-ea6d-4c91-ac05-a0bd214ac6ff",
+   "metadata": {},
+   "source": [
+    "# Feature Selection"
    ]
   },
   {
