--- a/ETL/dataAHRQCountySDOH.ipynb
+++ b/ETL/dataAHRQCountySDOH.ipynb
@@ -18,33 +18,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "883bb635-9ee5-40cc-86f4-b20a5eacdb37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3106, 1066)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "parm_AHRQCountySDOH_year = '2018'\n",
+    "\n",
     "import requests\n",
     "\n",
     "url = 'https://www.ahrq.gov/sites/default/files/wysiwyg/sdoh/SDOH_'+  parm_AHRQCountySDOH_year +'_COUNTY_1_0.xlsx'\n",
-    "r = requests.get(url)\n",
-    "with open('./ahrq.xlsx', 'wb') as f:\n",
-    "    f.write(r.content) \n",
+    "#r = requests.get(url)\n",
+    "#with open('./ahrq.xlsx', 'wb') as f:\n",
+    "#    f.write(r.content) \n",
     "\n",
     "import pandas as pd \n",
     "pd.set_option('display.max_rows', 15)\n",
     "  \n",
     "# Import the excel file and call it xls_file\n",
-    "dfAHRQCountySDOH = pd.read_excel('./ahrq.xlsx', sheet_name = 'Data')\n",
-    "dfAHRQCountySDOH = dfAHRQCountySDOH.drop(dfAHRQCountySDOH.columns[[ 0,1,2,5,6 ]],axis = 1)\n",
+    "#dfAHRQCountySDOH = pd.read_excel('./ahrq.xlsx', sheet_name = 'Data')\n",
+    "#dfAHRQCountySDOH = dfAHRQCountySDOH.drop(dfAHRQCountySDOH.columns[[ 0,1,2,5,6 ]],axis = 1)\n",
     "\n",
     "#\n",
     "# Data cleaning\n",
     "#\n",
-    "dfAHRQCountySDOH.iloc[:, 2:] = dfAHRQCountySDOH.iloc[:, 2:].apply(pd.to_numeric, errors= 'ignore')\n",
-    "dfAHRQCountySDOH['COUNTY'] = dfAHRQCountySDOH['COUNTY'].str.replace(' County','')\n",
+    "#dfAHRQCountySDOH.iloc[:, 2:] = dfAHRQCountySDOH.iloc[:, 2:].apply(pd.to_numeric, errors= 'ignore')\n",
+    "#dfAHRQCountySDOH['COUNTY'] = dfAHRQCountySDOH['COUNTY'].str.replace(' County','')\n",
     "\n",
-    "def out_AHRQCountySDOH():\n",
-    "   return dfAHRQCountySDOH"
+    "#def out_AHRQCountySDOH():\n",
+    "#   return dfAHRQCountySDOH\n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "temp.shape"
    ]
   },
   {
