--- a/environment/env1.ipynb
+++ b/environment/env1.ipynb
@@ -5,7 +5,7 @@
    "id": "d1c038d5-e1bf-40e7-8b79-a9d1da1ba6a2",
    "metadata": {},
    "source": [
-    "Establish environment by installing any packages needed and record all packages in a yaml file.  This could be handled by setting up a conda enviroment:\n",
+    "Establish environment by installing any packages needed and define imports and extensions.  Record all packages in a yaml file.  This could be handled by setting up a conda enviroment:\n",
     "\n",
     "##### check conda version\n",
     "    !conda --version\n",
@@ -24,14 +24,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "9107934a-e860-4e21-b8d3-4f70a93edaa1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use base env\n",
+    "\n",
+    "# define imports for all notebooks\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import warnings\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# define extensions\n",
+    "%matplotlib ipympl\n",
+    "%matplotlib inline\n",
+    "\n",
     "# record environment\n",
     "!pip list -v > env1.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d574c0e-d1b3-44af-918f-84eed5590a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
