--- a/CMS_AHRQ_Diabetes.ipynb
+++ b/CMS_AHRQ_Diabetes.ipynb
@@ -302,9 +302,6 @@
     }
    ],
    "source": [
-    "%matplotlib ipympl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "dfDisplay = dfCMSChronicPrevalence[dfCMSChronicPrevalence.STATE == 'Ohio']\n",
     "dfDisplay= dfDisplay.sort_values('DIABETES',ascending=False)\n",
     "dfDisplay.plot(x=\"COUNTY\", y=\"DIABETES\", kind=\"bar\", figsize=(20,5))\n",
@@ -823,7 +820,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns             # more matplotlib visualizations\n",
     "dfAHRQFood = dfAHRQCountySDOH[['STATE', 'COUNTY', 'ACS_PCT_HH_FOOD_STMP', 'ACS_PCT_HH_FOOD_STMP_BLW_POV' , 'CCBP_CFS_RATE', 'CCBP_FF_RATE', 'CHR_PCT_FOOD']]\n",
     "sns.pairplot(dfAHRQFood)\n"
    ]
@@ -838,7 +834,7 @@
     "tags": []
    },
    "source": [
-    "## Merge Data"
+    "## Merge Data and Create Training, Test sets"
    ]
   },
   {
@@ -886,15 +882,12 @@
    "source": [
     "#dfCMSChronicPrevalence\n",
     "dfMerged = pd.merge(dfCMSChronicPrevalence, dfAHRQFood,  how='left', left_on=['STATE','COUNTY'], right_on = ['STATE','COUNTY'])\n",
-    "sns.pairplot(dfMerged)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62a0c48f-ea6d-4c91-ac05-a0bd214ac6ff",
-   "metadata": {},
-   "source": [
-    "# Feature Selection"
+    "sns.pairplot(dfMerged)\n",
+    "\n",
+    "\n",
+    "X = df.drop([\"Weight\"], axis = 1)\n",
+    "y = df[\"Weight\"].apply(lambda x: 0 if x in [0, 2] else 1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y ,test_size = 0.2, random_state = 42)\n"
    ]
   },
   {
@@ -925,6 +918,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dffec3f0-8a64-4913-b15e-1b8b1a2882a9",
+   "metadata": {},
+   "source": [
+    "### Handle missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5de183-5ad7-4531-b52b-784547d47a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop columns that are more than 20% null\n",
+    "temp = dfAHRQCountySDOH.dropna(axis = 1, thresh=len(dfAHRQCountySDOH)*.8)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f2ecab-387b-4a77-8c07-94b175eedbbc",
+   "metadata": {},
+   "source": [
+    "### Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67b3cbc2-ea6f-48d2-96dd-847f29a97e29",
    "metadata": {
     "slideshow": {
@@ -933,7 +953,8 @@
     "tags": []
    },
    "source": [
-    "## Random Forest"
+    "## Random Forest\n",
+    "Random Forest can handle missing data."
    ]
   },
   {
@@ -946,7 +967,8 @@
     "tags": []
    },
    "source": [
-    "## Boosted Trees"
+    "## Boosted Trees\n",
+    "XGBoost can handle missing data."
    ]
   },
   {
