--- a/etl/dataAHRQCountySDOH.ipynb
+++ b/etl/dataAHRQCountySDOH.ipynb
@@ -190,7 +190,7 @@
    ],
    "source": [
     "# remove formatting issues by converting YEAR to int\n",
-    "dfCMSChronic[\"YEAR\"] = pd.to_numeric(dfCMSChronic[\"YEAR\"])\n",
+    "dfAHRQCountySDOHnew[\"YEAR\"] = pd.to_numeric(dfAHRQCountySDOHnew[\"YEAR\"])\n",
     "def out_AHRQCountySDOH():\n",
     "   return dfAHRQCountySDOHnew"
    ]
