--- a/etl/dataAHRQCountySDOH.ipynb
+++ b/etl/dataAHRQCountySDOH.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "19a7a5d7-0fb6-4cf2-95e0-de001a4583e4",
+   "cell_type": "markdown",
+   "id": "90f32e62-545f-4334-ad58-83358ab613fe",
    "metadata": {},
    "source": [
+    "# Data Extract, Agency for Healthcare Research and Quality SDOH\n",
     "Provide function out_AHRQCountySDOH() to return dataframe for AHRQ County level SDOH.  See https://www.ahrq.gov/sdoh/data-analytics/sdoh-data.html and https://www.ahrq.gov/sites/default/files/wysiwyg/sdoh/SDOH-Data-Sources-Documentation-v1-Final.pdf\n",
     "\n",
     "Input parameters:\n",
